[#665] Fix awkward word wrapping in embedded tables in items

--- a/styles/journal/tables.css
+++ b/styles/journal/tables.css
@@ -2,7 +2,8 @@
 	table {
 		margin-block-start: 1rem;
 		border-block: 2px solid var(--bf-color-border-blue);
-		background: none;
+		background: var(--bf-background-color-half-white);
+		word-break: normal;
 
 		caption {
 			color: var(--bf-text-color-blue);
